--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -41,7 +41,7 @@
   <div>
     <hr/>
     <h4 class="note note-info text-center">
-      EthDcrMiner64.exe -epool {{config.StratumHost}}:8008 -esm 0 -ewal &lt;address&gt; -allcoins 1 -allpools 1
+      EthDcrMiner64.exe -epool {{config.StratumHost}}:8008 -esm 0 -ewal &lt;address&gt; -eworker &lt;worker&gt;  -allcoins 1 -allpools 1
     </h4>
   </div>
   <div>
